--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "spbot",
   "version": "1.0.0",
   "description": "spbot server",
-  "main": "node app.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Saurabh Agarwal",
   "license": "ISC",
